@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-14T01:10:17Z",
+  "timestamp" : "2022-06-14T08:16:03Z",
   "count_outdated" : 332,
   "uniques_outdated" : 177,
   "count" : 360,
-  "uniques" : 194,
+  "uniques" : 195,
   "clones" : [
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 4 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
